--- a/src/index.html
+++ b/src/index.html
@@ -6,12 +6,18 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Teams Networking.</h1>
+    <header>
+      <h1>Teams Networking</h1>
+    </header>
+    <section>Table ...</section>
+    <footer>
+      <a href="https//https://github.com/nmatei/teams-networking"></a>
+    </footer>
   </body>
 </html>
 
 <!--
     <link rel="stylesheet" href="style.css" />
-<script src="index.js"></script>
+    <script src="index.js"></script>
 
 -->
