--- a/src/index.html
+++ b/src/index.html
@@ -7,11 +7,21 @@
   </head>
   <body>
     <header>
-      <h1>Teams Networking</h1>
+      <div id="header-wrapper">
+        <div id="my-picture"
+          a href="images/network-team-icon.png"></div>
+        </div>
+          ...
+        </div>
+        <div id="header-info">
+          <h1>Teams Networking</h1>
+          <h2>CRUD operations example (Create, Read, Update, Delete)</h2>
+        </div>
+      </div>
     </header>
     <section>Table ...</section>
     <footer>
-      <a href="https//https://github.com/nmatei/teams-networking"></a>
+      <a href="https://github.com/nmatei/teams-networking">Github.io</a>
     </footer>
   </body>
 </html>
