--- a/src/index.html
+++ b/src/index.html
@@ -8,19 +8,19 @@
   <body>
     <header>
       <div id="header-wrapper">
-        <div id="my-picture"
-          a href="images/network-team-icon.png"></div>
+        <div id="my-picture">
+          <img src="images/network-team-icon.png" width="100" alt="Teams" />
         </div>
-          ...
-        </div>
+
         <div id="header-info">
-          <h1>Teams Networking</h1>
+          <h1>Teams Networking...</h1>
           <h2>CRUD operations example (Create, Read, Update, Delete)</h2>
         </div>
       </div>
     </header>
     <section>
-      <table border="1">
+      <div></div>
+      <table id="teamsTable" border="1">
         <thead>
           <tr>
             <th>Promotion</th>
@@ -29,21 +29,9 @@
             <th>Project URL</th>
             <th></th>
           </tr>
-
         </thead>
-        <tbody>
-          <tr>
-            <td>won15</td>
-            <td>Noi</td>
-            <td>Teams</td>
-            <td>github</td>
-            <td>x</td>
-          </tr>
-
-        </tbody>
-        <tfoot>
-
-        </tfoot>
+        <tbody></tbody>
+        <tfoot></tfoot>
       </table>
     </section>
     <footer>
