create team request with team param

--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,38 @@
           </tr>
         </thead>
         <tbody></tbody>
-        <tfoot></tfoot>
+        <tfoot>
+          <tr>
+            <td>
+              <input
+                type="text"
+                name="promotion"
+                id="promotion"
+                placeholder="Enter promotion"
+                required
+              />
+            </td>
+            <td>
+              <input
+                type="text"
+                name="members"
+                id="members"
+                placeholder="Enter promotion"
+                required
+              />
+            </td>
+            <td>
+              <input type="text" name="name" id="name" placeholder="Enter promotion" required />
+            </td>
+            <td>
+              <input type="text" name="url" id="url" placeholder="Enter promotion" required />
+            </td>
+            <td>
+              <button type="submit"></button>
+              <button type="reset">X</button>
+            </td>
+          </tr>
+        </tfoot>
       </table>
     </section>
     <footer>
@@ -43,5 +74,5 @@
 <!--
     <link rel="stylesheet" href="style.css" />
     <script src="index.js"></script>
-
+create static form
 -->
