Revizuit toate erorile existente

--- a/src/index.html
+++ b/src/index.html
@@ -9,64 +9,67 @@
     <header>
       <div id="header-wrapper">
         <div id="my-picture">
-          <img src="images/network-team-icon.png" width="100" alt="Teams" />
+          <img src="images/network-team-icon.png" alt="" width="100" />
         </div>
 
         <div id="header-info">
-          <h1>Teams Networking...</h1>
+          <h1>Teams Networking</h1>
           <h2>CRUD operations example (Create, Read, Update, Delete)</h2>
         </div>
       </div>
     </header>
     <section>
-      <div></div>
-      <table id="teamsTable" border="1">
-        <thead>
-          <tr>
-            <th>Promotion</th>
-            <th>Members</th>
-            <th>Project Name</th>
-            <th>Project URL</th>
-            <th></th>
-          </tr>
-        </thead>
-        <tbody></tbody>
-        <tfoot>
-          <tr>
-            <td>
-              <input
-                type="text"
-                name="promotion"
-                id="promotion"
-                placeholder="Enter promotion"
-                required
-              />
-            </td>
-            <td>
-              <input
-                type="text"
-                name="members"
-                id="members"
-                placeholder="Enter promotion"
-                required
-              />
-            </td>
-            <td>
-              <input type="text" name="name" id="name" placeholder="Enter promotion" required />
-            </td>
-            <td>
-              <input type="text" name="url" id="url" placeholder="Enter promotion" required />
-            </td>
-            <td>
-              <button type="submit"></button>
-              <button type="reset">X</button>
-            </td>
-          </tr>
-        </tfoot>
-      </table>
+      <form id="teamsForm" method="get">
+        <table id="teamsTable" border="1">
+          <thead>
+            <tr>
+              <th>Promotion</th>
+              <th>Members</th>
+              <th>Project Name</th>
+              <th>Project URL</th>
+              <th></th>
+            </tr>
+          </thead>
+          <tbody></tbody>
+          <tfoot>
+            <tr>
+              <td>
+                <input
+                  type="text"
+                  name="promotion"
+                  id="promotion"
+                  placeholder="Enter promotion"
+                  required
+                />
+              </td>
+
+              <td>
+                <input
+                  type="text"
+                  name="members"
+                  id="members"
+                  placeholder="Enter members"
+                  required
+                />
+              </td>
+
+              <td>
+                <input type="text" name="name" id="name" placeholder="Enter name" required />
+              </td>
+              <td>
+                <input type="text" name="url" id="url" placeholder="Enter project url" required />
+              </td>
+              <td>
+                <button type="submit">💾</button>
+                <button type="reset">✖</button>
+              </td>
+            </tr>
+          </tfoot>
+        </table>
+      </form>
     </section>
     <footer>
-      <a href="https://github.com/nmatei/teams-networking">Github.io</a>
+      <a href="https://github.com/nmatei/teams-networking" target="_blank">👨‍💻 Source code</a>
     </footer>
   </body>
 </html>
@@ -75,4 +78,7 @@
     <link rel="stylesheet" href="style.css" />
     <script src="index.js"></script>
 create static form
+-->
+<!--
+  <a href="https://github.com/nmatei/teams-networking">Github.io</a>
 -->
