style table inputs

--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,11 @@
     <section>
       <form id="teamsForm" method="get">
         <table id="teamsTable" border="1">
+          <colgroup>
+            <col style="width: 125px;"></col>
+            <col style="width: 300px;"></col>
+            <col style="width: 80px;"></col>
+          </colgroup>
           <thead>
             <tr>
               <th>Promotion</th>
